feat(css): update styles for header, toasts, and upload
- Update header styles to position it with offset
- Add new styles for toast notifications
- Move toast styles from upload.css to toasts.css
- Refactor upload.css for better organization
- Add new signup.css and signup.js for user registration

--- a/css/basics.css
+++ b/css/basics.css
@@ -25,9 +25,8 @@ header {
 	position: fixed;
 	width: 100vw;
 	height: fit-content;
-	background-color: blue;
-	left: 0;
-	top: 0;
+	left: 4rem;
+	top: 1.5rem;
 }
 
 .top-left {
