--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -61,7 +61,7 @@
 	<header class="header-area header-sticky">
 		<nav class="main-nav">
 			<!-- ***** Logo Start ***** -->
-			<div href="index.html" class="logo">
+			<div href="/" class="logo">
 				<img src="assets/images/logo.png" alt="">
 				<h4 class="logo-header">
 					FunKey
@@ -79,13 +79,16 @@
 			<!-- ***** Search End ***** -->
 			<!-- ***** Menu Start ***** -->
 			<ul class="nav">
-				<li><a href="index.html" class="active">Home</a></li>
+				<li><a href="/" class="active">Home</a></li>
 				<li><a href="browse.html">Browse</a></li>
 				<li><a href="details.html">Details</a></li>
 				<li><a href="match.html">Match</a></li>
-				<li><a href="/login" class="active">Login</a></li>
+				<% if (!avatar) { %>
+					<li><a href="/login" class="active">Login</a></li>
+				<% } else { %>
+					<li><a href="/profile">Profile <img src="<%= avatar %>" alt=""></a></li>
+				<% } %>
 				<!-- <li><a href="profile.html">Login <img src="assets/images/logo.png" alt=""></a></li> -->
-				<!-- <li><a href="profile.html">Profile <img src="assets/images/avatar.jpg" alt=""></a></li> -->
 			</ul>
 			<a class='menu-trigger'>
 				<span>Menu</span>
@@ -543,7 +546,7 @@
 	<script src="assets/js/owl-carousel.js"></script>
 	<script src="assets/js/tabs.js"></script>
 	<script src="assets/js/popup.js"></script>
-	<script src="assets/js/custom.js"></script>
+	<script src="js/custom.js" defer></script>
 	<script src="js/levels.js" defer></script>
 	<script>
 		$(document).ready(function () {
