feat: Add notFoundHandler middleware and update dashboard view
- Create notFoundHandler middleware to handle 404 errors and provide a consistent response format.
- Update the dashboard view to include links to the Users and Musics pages.
- Add error handling middleware to handle server errors and provide a consistent response format.
- Update app.js to use the new middleware and routes.
- Add Music model to handle music data in the database.
- Create dashboard controller to handle rendering the dashboard, users, and musics views.

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -5,6 +5,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Funkey | Home page</title>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -17,12 +18,9 @@
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-	<!-- Font awesome 6.0.0 beta 3 CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-		integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<title>Funkey | Home page</title>
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+	integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+	crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- Additional CSS Files -->
 	<link rel="stylesheet" href="css/funkey.css">
@@ -135,7 +133,7 @@
 											</div>
 
 											<div class="footnote upload-caption">
-												<h4 class="text-truncate"><span>Upload Music</span><span>upload your file here</span></h4>
+												<h4 class="text-truncate"><span>Upload Music</span><span>upload your Music</span></h4>
 												<ul>
 													<!-- <li><i class="bi bi-collection-play"></i>&nbsp; 0</li> -->
 													<!-- <li><i class="fa fa-upload"></i>&nbsp; 0</li> -->
@@ -161,8 +159,9 @@
 											<div class="footnote caption">
 												<h4 class="text-truncate"><span>Ed sheeran</span><span>Perfect</span></h4>
 												<ul>
-													<li><i class="fa fa-star"></i>4.8</li>
-													<li><i class="fa fa-download"></i>2.3M</li>
+													<li><i class="fa fa-thumbs-up"></i>4.8</li>
+													<li><i class="fas fa-users"></i>2.3M</li>
+													<!-- <li><i class="fa fa-download"></i>2.3M</li> -->
 												</ul>
 											</div>
 										</div>
