--- a/src/views/dashboard/musics.ejs
+++ b/src/views/dashboard/musics.ejs
@@ -13,12 +13,6 @@
 	<link rel="shortcut icon" href="assets/icon/logo.ico" type="image/x-icon">
 
 	<style>
-		#upload-form {
-			position: relative !important;
-			left: 55%;
-			transform: translateX(-50%);
-		}
-
 		.delete-btn {
 			display: block;
 			cursor: pointer;
@@ -38,7 +32,10 @@
 			justify-content: center;
 		}
 
-		table .thumbnail {
+		table .table-thumbnail {
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
 			display: block;
 			height: 45px;
 			width: 50px;
@@ -58,10 +55,10 @@
 	<div class="container mt-5">
 		<div class="row mb-4">
 			<div class="col">
-				<h1 class="text-center">music Management Dashboard</h1>
+				<h1 class="text-center">Music Management Dashboard</h1>
 			</div>
 		</div>
-		<div class="row mb-4">
+		<div class="row mb-4" style="display: none">
 			<div class="col">
 				<form id="fakeUsersForm" class="form-inline justify-content-center">
 					<div class="form-group mb-2">
@@ -110,8 +107,11 @@
 												<%= music.lyrics %>
 											</a>
 										</td>
-										<td class="thumbnail-container"><span style="background-image: url('/<%= music.thumbnail %>');" class="thumbnail"></span></td>
-										<td class="delete-container"><i data-id="<%= music._id %>" class="fas fa-trash-alt delete-btn"></i></tdc>
+										<td class="thumbnail-container"><span style="background-image: url('/<%= music.thumbnail %>');"
+												class="table-thumbnail"></span></td>
+										<td class="delete-container">
+											<i data-id="<%= music._id %>" class="fas fa-trash-alt delete-btn"></i>
+										</td>
 									</tr>
 									<% }); %>
 					</tbody>
@@ -120,18 +120,18 @@
 		</div>
 	</div>
 	<div class="container mt-5">
-		<form id="upload-form" class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="musicModalLabel">Upload Music</h5>
+		<form id="upload-form" class="upload-container">
+			<div class="upload-header">
+				<h5 class="upload-title" id="musicModalLabel">Upload Music</h5>
 				</button>
 			</div>
-			<div class="modal-body">
+			<div class="upload-body">
 				<div class="left-side">
 					<div class="thumbnail drop-zone" data-type="image" data-image-url="assets/images/default_thumbnail.jpg">
 						<div class="play-icon-container">
 							<i class="fa fa-file-image" aria-hidden="true"></i>
 						</div>
-						<input type="hidden" name="thumbnail" value="assets/images/default_thumbnail.jpg">
+						<input type="hidden" name="thumbnail" value="">
 					</div>
 					<input type="file" accept="image/*" id="thumbnail-upload" style="display: none;">
 					<div class="drag-drop artist-music-name">
@@ -192,14 +192,16 @@
 					</div>
 				</div>
 			</div>
-			<!-- <div class="modal-footer"> -->
-			<div class="modal-footer border-0">
+			<!-- <div class="upload-footer"> -->
+			<div class="upload-footer border-0">
 				<button type="submit" class="btn btn-outline-primary"><i
 						class="fas fa-cloud-upload-alt"></i>&nbsp;Upload</button>
 			</div>
 		</form>
 	</div>
 
+
+	<br><br><br><br><br><br><br>
 	<!-- Bootstrap and jquery -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
@@ -255,8 +257,34 @@
 						if (!res.ok)
 							throw new Error(data.message);
 
+						// let index = $('#musicsTableBody tr').length + 1;
+						// let music = data.music;
+						// $('#musicsTableBody').append(`
+						// 								<tr id="${music._id}">
+						// 										<th scope="row" class="ordinal">${index++}</th>
+						// 										<td>${music.title}</td>
+						// 										<td>${music.artist}</td>
+						// 										<td><a href='${music.video}'>${music.video}</a></td>
+						// 										<td><a href='${music.lyrics}'>${music.lyrics}</a></td>
+						// 										<td class="thumbnail-container">
+						// 											<span style="background-image: url('/${music.thumbnail}');" class="table-thumbnail"></span>
+						// 											</td>
+						// 										<td class="delete-container">
+						// 											<i data-id="${music._id}" class="fas fa-trash-alt delete-btn"></i>
+						// 										</td>
+						// 								</tr>
+						// 						`);
+
+						// $(this).find('input[name="artist"]').val('');
+						// $(this).find('input[name="title"]').val('');
+						// $(this).find('input[name="video"]').val('');
+						// $(this).find('input[name="lyrics"]').val('');
+						// $(this).find('input[name="thumbnail"]').val('');
+
+						
 						console.log(data.message);
 						toastSuccess(data.message);
+						location.reload();
 					} catch (err) {
 						toastDanger(err.message);
 						console.error(err);
@@ -323,14 +351,14 @@
 				affirm('Are you sure you want to delete this music?').then((result) => {
 					if (result) {
 						console.log('Deleting music...');
-						deleteUser(id);
+						deleteMusic(id);
 					} else {
 						console.log('Deletion cancelled!');
 					}
 				});
 			});
 
-			function deleteUser(id) {
+			function deleteMusic(id) {
 				fetch('/deleteMusic', {
 					method: 'DELETE',
 					headers: {
@@ -342,27 +370,27 @@
 						return res.json().then((err) => Promise.reject(err));
 					return res.json();
 				}).then(res => {
-						const row = document.getElementById(id);
-						if (row) {
-							let ordinal = $(row).find('.ordinal');
-							let index = parseInt(ordinal.text());
+					const row = document.getElementById(id);
+					if (row) {
+						let ordinal = $(row).find('.ordinal');
+						let index = parseInt(ordinal.text());
 
-							let next = $(row).next()[0];
-							while ($(next).is('tr')) {
-								$(next).find('.ordinal').html(`${index++}`);
-								next = $(next).next()[0];
-							}
-							console.log('music Deleted!');
-
-							row.parentNode.removeChild(row);
-						} else {
-							console.error(`Row with ID "${rowId}" not found.`);
+						let next = $(row).next()[0];
+						while ($(next).is('tr')) {
+							$(next).find('.ordinal').html(`${index++}`);
+							next = $(next).next()[0];
 						}
-						toastSuccess(res.message);
-					}).catch(err => {
-						console.error(err);
-						toastDanger(err.message);
-					});
+						console.log('music Deleted!');
+
+						row.parentNode.removeChild(row);
+					} else {
+						console.error(`Row with ID "${rowId}" not found.`);
+					}
+					toastSuccess(res.message);
+				}).catch(err => {
+					console.error(err);
+					toastDanger(err.message);
+				});
 			}
 		});
 	</script>
