feat(rating): Implement rating option and save rating and views to database
- Update keyboard.css to change hover color to #5e8de7
- Add rating and views columns to musics.ejs table
- Implement popup functionality for music thumbnails in popup.js
- Organize file structure and move popup.js to assets/js directory

--- a/src/views/dashboard/musics.ejs
+++ b/src/views/dashboard/musics.ejs
@@ -77,6 +77,8 @@
 							<th scope="col">#</th>
 							<th scope="col">Music Title</th>
 							<th scope="col">Artist Name</th>
+							<th scope="col">Rating</th>
+							<th scope="col">Views</th>
 							<th scope="col">Music Video</th>
 							<th scope="col">Lyrics</th>
 							<th scope="col">Thumbnail</th>
@@ -96,6 +98,12 @@
 										</td>
 										<td>
 											<%= music.artist %>
+										</td>
+										<td>
+											<%= music.rating.toFixed(2) %>
+										</td>
+										<td>
+											<%= music.views %>
 										</td>
 										<td>
 											<a href="/<%= music.video %>">
