--- a/public/css/keyboard.css
+++ b/public/css/keyboard.css
@@ -11,16 +11,20 @@
 
 * {
 	--keyboard-clr: #444;
-	--keyboard-hover-clr: #ff6868;
+	/* --keyboard-hover-clr: #ff6868; */
+	--keyboard-hover-clr: #5e8de7;
 	--keyboard-size: 1.25rem;
 	--keyboard-hover-size: 1.15rem;
 }
 
 .keyboard-container {
-		position: absolute;
-    display: grid;
-    place-items: center;
-    min-height: 100vh;
+		position: fixed;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+    /* display: grid; */
+    /* place-items: center; */
+    /* min-height: 100vh; */
 }
 
 .keyboard {
