--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -19,8 +19,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-	integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-	crossorigin="anonymous" referrerpolicy="no-referrer" />
+		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- Additional CSS Files -->
 	<link rel="stylesheet" href="css/funkey.css">
@@ -83,10 +83,10 @@
 				<li><a href="match.html">Match</a></li>
 				<% if (!avatar) { %>
 					<li><a href="/login" class="active">Login</a></li>
-				<% } else { %>
-					<li><a href="/profile">Profile <img src="<%= avatar %>" alt=""></a></li>
-				<% } %>
-				<!-- <li><a href="profile.html">Login <img src="assets/images/logo.png" alt=""></a></li> -->
+					<% } else { %>
+						<li><a href="/profile">Profile <img src="<%= avatar %>" alt=""></a></li>
+						<% } %>
+							<!-- <li><a href="profile.html">Login <img src="assets/images/logo.png" alt=""></a></li> -->
 			</ul>
 			<a class='menu-trigger'>
 				<span>Menu</span>
@@ -144,132 +144,40 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-lg-3 col-sm-6">
-										<div class="item" data-toggle="modal" data-target="#levelsModal">
-											<div class="thumbnail"
-												data-image-url="https://external-preview.redd.it/b5R5gXGYfBVWVIppxnX5T0Bdtt1hJSK7XnUN6ypf_9s.jpg?width=640&crop=smart&auto=webp&s=eb12b986353e8b1bf2bfa6c8928707d8194dfc06">
-												<div class="play-icon-container">
-													<i class="bi bi-play-circle"></i>
-												</div>
-												<img
-													src="https://external-preview.redd.it/b5R5gXGYfBVWVIppxnX5T0Bdtt1hJSK7XnUN6ypf_9s.jpg?width=640&crop=smart&auto=webp&s=eb12b986353e8b1bf2bfa6c8928707d8194dfc06"
-													alt="" style="display: none">
-											</div>
-											<!-- <img src="assets/images/popular-01.jpg" alt=""> -->
-											<div class="footnote caption">
-												<h4 class="text-truncate"><span>Ed sheeran</span><span>Perfect</span></h4>
-												<ul>
-													<li><i class="fa fa-thumbs-up"></i>4.8</li>
-													<li><i class="fas fa-users"></i>2.3M</li>
-													<!-- <li><i class="fa fa-download"></i>2.3M</li> -->
-												</ul>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-3 col-sm-6">
-										<div class="item">
-											<div class="thumbnail" data-toggle="modal" data-target="#levelsModal" data-image-url="https://f4.bcbits.com/img/a1160483297_16.jpg">
-												<div class="play-icon-container">
-													<i class="bi bi-play-circle"></i>
-												</div>
-												<!-- <img src="https://f4.bcbits.com/img/a1160483297_16.jpg" alt=""> -->
-											</div>
-											<div class="footnote">
-												<h4 class="text-truncate"><span>Michael Bubble</span><span>Feeling Good</span></h4>
-												<ul>
-													<li><i class="fa fa-star"></i> 4.8</li>
-													<li><i class="fa fa-download"></i> 2.3M</li>
-												</ul>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-3 col-sm-6">
-										<div class="item">
-											<div class="thumbnail" data-toggle="modal" data-target="#levelsModal" data-image-url="https://e-cdn-images.dzcdn.net/images/cover/ee109f323c86f6e9fc5a6dafd5b538ab/500x500-000000-80-0-0.jpg">
-												<div class="play-icon-container">
-													<i class="bi bi-play-circle"></i>
-												</div>
-												<!-- <img
-													src="https://e-cdn-images.dzcdn.net/images/cover/ee109f323c86f6e9fc5a6dafd5b538ab/500x500-000000-80-0-0.jpg"
-													alt=""> -->
-											</div>
-											<div class="footnote">
-												<h4 class="text-truncate"><span>Nathan Evans</span><span>Wellerman (Sea Shanty)</span></h4>
-												<ul>
-													<li><i class="fa fa-star"></i> 4.8</li>
-													<li><i class="fa fa-download"></i> 2.3M</li>
-												</ul>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-3 col-sm-6">
-										<div class="item">
-											<div class="thumbnail">
-												<div class="play-icon-container">
-													<i class="bi bi-play-circle"></i>
-												</div>
-												<img src="assets/images/popular-04.jpg" alt="">
-											</div>
-											<div class="footnote">
-												<h4 class="text-truncate"><span>CS-GO</span><span>Legendary</span></h4>
-												<ul>
-													<li><i class="fa fa-star"></i> 4.8</li>
-													<li><i class="fa fa-download"></i> 2.3M</li>
-												</ul>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="item">
-											<div class="row">
-												<div class="col-lg-6 col-sm-6">
-													<div class="item inner-item">
-														<img src="assets/images/popular-05.jpg" alt="">
-														<h4>Mini Craft<br><span>Legendary</span></h4>
-														<ul>
-															<li><i class="fa fa-star"></i> 4.8</li>
-															<li><i class="fa fa-download"></i> 2.3M</li>
-														</ul>
+
+									<% musics.forEach(music=> { %>
+
+										<div class="col-lg-3 col-sm-6">
+											<div class="item music-card" data-toggle="modal" data-target="#levelsModal">
+												<div class="thumbnail" data-image-url="<%= music.thumbnail %>">
+													<div class="play-icon-container">
+														<i class="bi bi-play-circle"></i>
 													</div>
+													<input type="hidden" name="music" value="<%= music._id %>">
 												</div>
-												<div class="col-lg-6 col-sm-6">
-													<div class="item">
-														<img src="assets/images/popular-06.jpg" alt="">
-														<h4>Eagles Fly<br><span>Matrix Games</span></h4>
-														<ul>
-															<li><i class="fa fa-star"></i> 4.8</li>
-															<li><i class="fa fa-download"></i> 2.3M</li>
-														</ul>
-													</div>
+
+
+												<div class="footnote caption">
+													<h4 class="text-truncate"><span>
+															<%= music.artist %>
+														</span><span>
+															<%= music.title %>
+														</span></h4>
+													<ul>
+														<li><i class="fa fa-thumbs-up"></i>
+															<%= music.rating.toFixed(1) %>
+														</li>
+														<li><i class="fas fa-users"></i>
+															<%= music.views %>
+														</li>
+													</ul>
 												</div>
 											</div>
 										</div>
-									</div>
-									<div class="col-lg-3 col-sm-6">
-										<div class="item">
-											<img src="assets/images/popular-07.jpg" alt="">
-											<h4>Warface<br><span>Max 3D</span></h4>
-											<ul>
-												<li><i class="fa fa-star"></i> 4.8</li>
-												<li><i class="fa fa-download"></i> 2.3M</li>
-											</ul>
-										</div>
-									</div>
-									<div class="col-lg-3 col-sm-6">
-										<div class="item">
-											<img src="assets/images/popular-08.jpg" alt="">
-											<h4>Warcraft<br><span>Legend</span></h4>
-											<ul>
-												<li><i class="fa fa-star"></i> 4.8</li>
-												<li><i class="fa fa-download"></i> 2.3M</li>
-											</ul>
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="main-button">
-											<a href="browse.html">Discover Popular</a>
-										</div>
-									</div>
+
+										<% }); %>
+
+
 								</div>
 							</div>
 						</div>
@@ -375,7 +283,7 @@
 	<div class="modal fade levels-modal" tabindex="-1" id="levelsModal" aria-labelledby="levelsModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog">
-			<div class="modal-content">
+			<form class="modal-content levels-form">
 				<div class="modal-header border-secondary">
 					<h5 class="modal-title" id="levelsModalLabel">Play Music</h5>
 					<!-- <h5 class="modal-title">Select Level</h5> -->
@@ -448,9 +356,10 @@
 				<div class="modal-footer border-0">
 					<!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
 					<!-- <button type="button" class="btn btn-primary">Play</button> -->
-					<button id="start" type="button" class="btn btn-primary btn-lg">Play</button>
+					<button id="start" type="submit" class="btn btn-primary btn-lg">Play</button>
 				</div>
-			</div>
+				<input type="hidden" name="music" value="">
+			</form>
 		</div>
 	</div>
 
@@ -458,7 +367,7 @@
 	<div class="modal fade upload-modal" tabindex="-1" id="uploadModal" aria-labelledby="uploadModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog">
-			<div class="modal-content">
+			<form class="modal-content">
 				<div class="modal-header border-secondary">
 					<h5 class="modal-title" id="levelsModalLabel">Play Music</h5>
 					<!-- <h5 class="modal-title">Select Level</h5> -->
@@ -472,6 +381,8 @@
 							src="https://external-preview.redd.it/b5R5gXGYfBVWVIppxnX5T0Bdtt1hJSK7XnUN6ypf_9s.jpg?width=640&crop=smart&auto=webp&s=eb12b986353e8b1bf2bfa6c8928707d8194dfc06"
 							alt="">
 						<div class="level-selector-title">Ed Sheeran - Perfect</div>
+						<input type="hidden" name="artist" value="">
+						<input type="hidden" name="title" value="">
 						<!-- Select Level -->
 						<div class="btn-group btn-group-toggle level-buttons" data-toggle="buttons">
 							<label class="btn btn-outline-success brand-bg" data-level="easy">
@@ -526,12 +437,13 @@
 							</button> -->
 						</div>
 					</div>
+
 				</div>
 				<!-- <div class="modal-footer border-secondary"> -->
 				<div class="modal-footer border-0">
 					<button id="start" type="button" class="btn btn-primary btn-lg">Play</button>
 				</div>
-			</div>
+			</form>
 		</div>
 	</div>
 
@@ -544,9 +456,9 @@
 	<script src="assets/js/isotope.min.js"></script>
 	<script src="assets/js/owl-carousel.js"></script>
 	<script src="assets/js/tabs.js"></script>
-	<script src="assets/js/popup.js"></script>
-	<script src="js/custom.js" defer></script>
-	<script src="js/levels.js" defer></script>
+	<script src="/js/popup.js"></script>
+	<script src="/js/custom.js" defer></script>
+	<script src="/js/levels.js" defer></script>
 	<script>
 		$(document).ready(function () {
 			$('#levelsModal').modal({
