--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -78,7 +78,7 @@
 			<!-- ***** Menu Start ***** -->
 			<ul class="nav">
 				<li><a href="/" class="active">Home</a></li>
-				<li><a href="browse.html">Browse</a></li>
+				<li><a href="/browse">Browse</a></li>
 				<li><a href="details.html">Details</a></li>
 				<li><a href="match.html">Match</a></li>
 				<% if (!avatar) { %>
