--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -24,7 +24,7 @@
 .header-area .main-nav {
   /* min-height: 80px; */
   background: transparent;
-	/* width: 100vw; */
+	width: 100vw;
   display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -32,6 +32,41 @@
   padding: 15px 0px;
 	gap: 1rem;
   border-radius: 50px;
+	flex-grow: 1;
+}
+
+.header-area .main-nav #search {
+	display: block;
+  position: relative;
+  margin: 0 1rem;
+  transition: flex-grow 0.5s ease;	
+}
+
+.header-area .main-nav #search input {
+	background-color: #27292a;
+  height: 46px;
+  border-radius: 23px;
+  border: none;
+  color: #666;
+  font-size: 14px;
+  padding: 0px 15px 0px 45px;
+	width: 100%;
+}
+
+.header-area .main-nav #search input:focus {
+	border: none;
+	outline: none;
+	padding: 0 55px;
+}
+
+.header-area .main-nav #search i {
+	position: absolute;
+  color: #666;
+  left: 20px;
+  top: 16px;
+  width: 18px;
+  height: 18px;
+  font-size: 16px;
 }
 
 .logo {
@@ -123,17 +158,10 @@
 	/* background-color: red; */
 	overflow: hidden;
 }
-.thumbnail img {
-	/* min-height: 100%;
-	min-width: 100%; */
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-}
 
 .upload {
 	background-color: #5e8de7;
+	background-color: #343a40;
 	position: relative;
 	display: block;
 	height: 12rem;
@@ -141,8 +169,7 @@
 	border-radius: 23px;
 	color: #e1e1e1;
 	cursor: pointer;
-	transition: 1s color ease-in-out;
-	transition: 1s background-color;
+	transition: background-color 1s;
 }
 
 .upload i {
@@ -150,12 +177,18 @@
 	left: 50%;
 	top: 50%;
 
+	/* color: */
+	
 	transform: translate(-50%, -50%);
 	font-size: 5rem;
+	transition: color 0.5s ease-in-out;
+}
+
+.upload i:hover {
+	color: gold;
 }
 
 .upload:hover {
-	color: gold;
 	background-color: #4447;
 }
 
@@ -166,3 +199,30 @@
 
 }
 
+.heading-section {
+	display: flex;
+	flex-direction: row;
+	align-items: baseline;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+}
+
+.heading-section button {
+	justify-self: right;
+}
+
+.tiny-thumbnail {
+	display: block;
+	background-image: url('/assets/images/default_thumbnail.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 4.5rem !important;
+	height: 4.5rem;
+
+  margin-bottom: -0.5em;
+  margin-left: 0.5em;
+
+	border-radius: 23px;
+	border-radius: 50%;
+}
