--- a/public/css/levels.css
+++ b/public/css/levels.css
@@ -1,7 +1,7 @@
 .modal-content {
+  width: fit-content;
   position: fixed;
   left: 50%;
-  width: fit-content;
   top: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -44,10 +44,51 @@
 .modal-body {
   position: relative;
 }
+.modal-body .thumbnail-img-container {
+	position: relative;
+	width: fit-content;
+	height: fit-content;
+	margin: auto;
+}
+
+.modal-body .thumbnail-img-overlay {
+	position: absolute;
+	left: 0%;
+	top: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: #1115;
+	z-index: 10000000;
+	opacity: 0;
+	transition: opacity 0.5s ease;
+	cursor: pointer;
+}
+
+.modal-body .thumbnail-img-overlay:hover {
+	opacity: 1;
+}
+
+.modal-body .thumbnail-img-container i {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+
+	font-size: 2rem;
+	cursor: pointer;
+	color: #1f212299;
+	color: #f75e8d;
+	color: #5ef78d;
+	/* color: #ff212299;
+	color: #ffff2299; */
+}
+
 .modal-body .thumbnail-img {
-  border-radius: 5px;
+	border-radius: 5px;
   width: max-content;
   height: 12rem !important;
+	/* box-shadow: 1px 1px 2px 2px #111a; */
+	box-shadow: 0px 14px 18px -7px #111a;
 }
 
 .level-selector-container {
