--- a/public/css/lyrics.css
+++ b/public/css/lyrics.css
@@ -1,6 +1,11 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"); */
 @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Nova+Mono&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap');
 
+header {
+	left: 1.5rem;
+	top: 0rem;
+}
+
 .overlay-loader,
 .whole-body {
   width: 100vw;
@@ -22,6 +27,9 @@
   font-size: 1rem;
   margin: auto;
   width: fit-content;
+
+	border-color: #333;;
+	color: #e1e1e1ed;
 
   letter-spacing: 4px;
   border-top: none;
@@ -70,6 +78,8 @@ video {
   opacity: 0.75;
 
   z-index: calc(var(--logo-z-index) + 10000);
+
+	mix-blend-mode: overlay;
 }
 
 .keyboard-container {
