--- a/src/views/levels.ejs
+++ b/src/views/levels.ejs
@@ -10,7 +10,7 @@
 		<div class="modal-body border-dark">
 			<div class="level-selector-container">
 				<div class="thumbnail-img-container">
-					<div class="thumbnail-img-overlay" onclick="$(this).find('i').toggleClass('far fas');">
+					<div class="thumbnail-img-overlay">
 						<i class="far fa-heart"></i>
 					</div>
 					<!-- <i class="fas fa-heart text-danger liked"></i> -->
