--- a/src/views/browse.ejs
+++ b/src/views/browse.ejs
@@ -44,7 +44,7 @@
 			left: 50%;
 			top: 50%;
 			transform: translate(-50%, -50%);
-			
+
 			width: 700px;
 			display: flex;
 			flex-direction: column !important;
@@ -62,6 +62,23 @@
 			width: 100%;
 			text-align: left;
 			padding-left: 1em;
+		}
+
+		.library-filter li {
+			cursor: pointer;
+			transition: font-weight 0.15s ease;
+		}
+
+		.library-filter li:hover {
+			font-weight: bold;
+		}
+
+		.library-filter li:first-child:hover {
+			border-bottom: 1px solid #1f212299;
+		}
+
+		.library-filter li:last-child:hover {
+			border-top: 1px solid #1f212299;
 		}
 	</style>
 </head>
@@ -159,12 +176,14 @@
 									<% musics.forEach(music=> { %>
 
 										<div class="col-lg-3 col-sm-6">
-											<div class="item music-card" data-toggle="modal" data-target="#levelsModal">
-												<div class="thumbnail" data-image-url="<%= music.thumbnail %>">
+											<div class="item music-card">
+												<div class="thumbnail" data-toggle="modal" data-target="#levelsModal" data-id="<%= music._id %>"
+													data-image-url="<%= music.thumbnail %>">
 													<div class="play-icon-container">
 														<i class="bi bi-play-circle"></i>
 													</div>
 													<input type="hidden" name="music" value="<%= music._id %>">
+													<input type="hidden" name="favorite" value="<%= music.favorite %>">
 												</div>
 
 
@@ -205,61 +224,24 @@
 										type="button">
 										<i class="fas fa-filter"></i> <b>Filter</b>
 									</button>
-									<ul class="dropdown-menu bg-dark w-25">
-										<li><a class="dropdown-item bg-dark text-light" href="#"><i
-													class="fas fa-star text-warning"></i>&nbsp; Favourites</a></li>
-										<li><a class="dropdown-item bg-dark text-light" href="#"><i
-													class="fas fa-cloud-upload-alt text-primary"></i>&nbsp; Uploaded</a></li>
+									<ul class="dropdown-menu bg-dark w-25 library-filter">
+										<li class="dropdown-item bg-dark text-light favorites">
+											<i class="fas fa-star text-warning"></i>&nbsp; Favourites
+										</li>
+										<li class="dropdown-item bg-dark text-light uploaded">
+											<i class="fas fa-cloud-upload-alt text-primary"></i>&nbsp; Uploaded
+										</li>
 									</ul>
 								</div>
 							</div>
 
-							<div class="item">
-								<ul>
-									<li><span class="tiny-thumbnail"></span></li>
-									<li>
-										<h4>Ed Sheeran</h4><span>Perfect</span>
-									</li>
-									<li>
-										<h4>Date Added</h4><span>22/06/2036</span>
-									</li>
-									<li>
-										<h4>Hours Played</h4><span>740 H 52 Mins</span>
-									</li>
-									<li>
-										<h4>Type</h4><span>uploaded</span>
-									</li>
-									<li>
-										<div class="main-border-button"><a href="#">Play</a></div>
-									</li>
-								</ul>
-							</div>
-							<div class="item">
-								<ul>
-									<li><span class="tiny-thumbnail"></span></li>
-									<li>
-										<h4>Ed Sheeran</h4><span>Perfect</span>
-									</li>
-									<li>
-										<h4>Date Added</h4><span>22/06/2036</span>
-									</li>
-									<li>
-										<h4>Hours Played</h4><span>740 H 52 Mins</span>
-									</li>
-									<li>
-										<h4>Type</h4><span>Favourite</span>
-									</li>
-									<li>
-										<div class="main-border-button"><a href="#">Play</a></div>
-									</li>
-								</ul>
-							</div>
-							<!-- <div class="item last-item"> -->
+							<div class="music-library" style="display: block; margin-left: 3em; margin-right: 1em;">
 
+							</div>
 						</div>
 						<div class="col-lg-12">
-							<div class="main-button">
-								<a href="profile.html">View Your Library</a>
+							<div class="main-button view-library-btn">
+								<a href="/">View Your Library</a>
 							</div>
 						</div>
 					</div>
@@ -294,7 +276,7 @@
 	<!-- Modals 2 -->
 	<div class="modal fade upload-modal" tabindex="-1" id="uploadModal" aria-labelledby="uploadModalLabel"
 		aria-hidden="true">
-			<%- include('upload.ejs') %>
+		<%- include('upload.ejs') %>
 	</div>
 
 	<!-- Bootstrap JS and dependencies -->
@@ -326,7 +308,6 @@
 			// 	show: false
 			// });
 			console.log('setting done');
-
 			$('.thumbnail, .uploaded-thumbnail').each(function () {
 				var imageUrl = $(this).data('image-url');
 				$(this).css('background-image', 'url(' + imageUrl + ')');
@@ -334,6 +315,7 @@
 
 			// $('#levelsModal').modal('hide');
 			// $('#levelsModal').hide();
+
 		});
 	</script>
 
