--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,31 +4,46 @@
 }
 
 body {
-  background-color: #1e1e1e;
-  color: #f1f1f1;
+  /* background-color: #1e1e1e;
+	background-color: #F0F0F0 !important; */
+	/* background-image: url('https://img.freepik.com/premium-photo/world-book-day-background_1135385-63408.jpg?w=740') !important;
+  background-repeat: no-repeat !important;
+	background-size: cover !important;
+	background-position: center !important; */
+	color: #f1f1f1;
   font-family: "Courier New", Courier, monospace;
   /* font-weight: bold; */
   font-size: 24px;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
 }
 
 .container {
   position: relative;
   display: block;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
+	width: fit-content;
+	height: 70vh;
+	padding: 2rem 5rem;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	width: 90vw;
+	margin: auto;
 }
 
 #textbox {
-  position: absolute;
+  position: relative;
+	margin: auto;
   display: flex;
   flex-wrap: wrap;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 75%;
+  width: 100%;
+  height: 100%;
   /* text-align: justify; */
   /* overflow: hidden; */
-  line-height: 1.25em;
+  /* line-height: 1.25em; */
+  line-height: 2em;
 }
 
 .char {
